second review fix (button types, extra fonts, profile overflow

--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -4,7 +4,6 @@
   background: #000;
   color: #fff;
   border-radius: 2px;
-  font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
