--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,7 +1,7 @@
 .form__input {
   width: 358px;
   padding: 0;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
